--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "Hello World!",
-  "description": "This extension shows a Hello World message!",
+  "name": "Password Generator",
+  "description": "It generates a random password",
   "version": "1.0",
   "browser_action": {
     "default_icon": "icon.png",
